# jornal-1936

./: README.md
playlist/: criar_playlist.py  playlist.txt  pyproject.toml
