[project]
name = "jornal-vovo"
version = "0.1.0"
description = "Playlist da vovó"
authors = [
    {name = "no"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "spotipy (>=2.26.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
